# frontend-tfm

./: TFM-motif.ai  references.json  skills-lock.json  tfm_environment.yml
Tex/: TFG-GM.cls  TFG.bib  barccsyn-abstract.tex  encods_abstract.tex  main 2.out  main 2.toc  main copy.fdb_latexmk  main.bbl  main.fdb_latexmk  main.fls  main.tex  xelatex15990.fls
Tex/figures/: 3WM.ai  GLMHMM-3WM.tex  GLMHMM-t-text.tex  GLMHMM-t.tex  GLMHMM-text.tex  GLMHMM.tex  U_S.tex  ashwood-scheme-glmhmmt.ai  ashwood-scheme-lapses-repeat.ai  ashwood-scheme.ai  comparison_Us.tex  corridor copia 2.ai  corridor.ai  glm.tex  glm2.tex  scheme.tex  scheme_U_2.tex
Tex/sections/: Discussion.tex  Introduction.fdb_latexmk  Introduction.fls  Introduction.tex  Methods.tex  Results.tex  abstract.tex  acknowledgements.tex
frontend/: README.md  astro.config.mjs  package-lock.json  package.json
glmhmmt/: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml
glmhmmt/examples/: fit_glm_with_lapses.py  use_softmax_glmhmm.py
glmhmmt/tests/: test_analysis_common_trial_concat.py  test_choice_lag_tau.py  test_fit_common.py  test_fitted_regressor_families.py  test_glm_lapse_modes.py  test_mcdr_one_hot_families.py  test_model_manager_groups.py  test_model_manager_widget_commands.py  test_model_plots_emission_weights.py  test_nmdar_subject_choice_tau.py  test_plots_emissions.py  test_plots_feature_boxplot.py  test_postprocess_plot_payloads.py  test_postprocess_weights_boxplot_payload.py  test_private_alternative_glm.py  test_softmax_glmhmm_baseline.py  test_softmax_glmhmm_validation.py  test_task_discovery.py  test_transition_weights.py  test_two_afc_delay_one_hot_families.py  test_two_afc_one_hot_families.py
slides/: TFG-summary-figure.pptx  TFM copia.key
(+19 files in other folders)
